7/16/12 update bounds of game reward when the canvas is resized
7/16/12 encapsulate handling of "best scores"
7/16/12 play end-of-game sounds
7/16/12 add basic structure of game reward
7/13/12 implemented basic game flow between settings, play and results phases
7/13/12 set up basic "phases" of game, add dependency on common "games" module
# 0.00.19 (65067) Jun 14, 2012
6/14/12 first 2 tabs cleaned up, feature complete, all known issues addressed
6/14/12 fix jumpiness of slope manipulator that was happening when skipping over slope=0/0
6/14/12 fix graph tick marks to display integer values
6/13/12 when model adjusts slope to prevent undefined lines, send a sim-sharing model message
6/13/12 make equation spinners update correctly when they skip over zero value to prevent slope=0/0
6/12/12 add specialization of StraightLine that snaps its args to an integer grid
6/12/12 encapsulate method of rounding and formatting doubles to ints in SimplifiedEquationFactory.toIntString
6/12/12 show equation on line while manipulators are in use, since we're snapping to grid [65022]
6/12/12 remove MathUtil.roundHalfUp calls that are unnecessary now that we snap to grid while dragging [65019]
6/12/12 rename MathUtil.round to MathUtil.roundHalfUp, to prevent accidentally using Math.round
6/12/12 factor out duplication in GraphNode
6/12/12 change test harnesses for interactive equations
6/12/12 javadoc, reorder constructor args for consistency
6/12/12 refactor duplication in canvas classes for first 2 tabs
6/12/12 add model constructor for graph with 4 uniform quadrants, javadoc
6/12/12 more refactoring of model-container classes
6/12/12 create a property that ensures that our line is not undefined
6/12/12 refactor duplication in model-container classes for first 2 tabs
6/12/12 refactor duplication in control panels for interactive equation
6/12/12 use the same slope drag handler for both line forms
6/12/12 refactor duplication in class hierarchy of line manipulation drag handlers